// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationLauncher custom icon 1`] = `
<ApplicationLauncher
  aria-label="Application launcher"
  className=""
  direction="down"
  dropdownItems={
    Array [
      <Unknown>
        Link
      </Unknown>,
      <Unknown
        component="button"
      >
        Action
      </Unknown>,
      <Unknown
        isDisabled={true}
      >
        Disabled Link
      </Unknown>,
      <Unknown
        component="button"
        isDisabled={true}
      >
        Disabled Action
      </Unknown>,
      <Unknown />,
      <Unknown>
        Separated Link
      </Unknown>,
      <Unknown
        component="button"
      >
        Separated Action
      </Unknown>,
    ]
  }
  isDisabled={false}
  isGrouped={false}
  isOpen={true}
  items={Array []}
  onSelect={[Function]}
  onToggle={[Function]}
  position="left"
  toggleIcon={
    <HelpIcon
      color="currentColor"
      id="test-icon"
      noVerticalAlign={false}
      size="sm"
      title={null}
    />
  }
>
  <DropdownWithContext
    aria-label="Application launcher"
    className=""
    direction="down"
    dropdownItems={
      Array [
        <Unknown>
          Link
        </Unknown>,
        <Unknown
          component="button"
        >
          Action
        </Unknown>,
        <Unknown
          isDisabled={true}
        >
          Disabled Link
        </Unknown>,
        <Unknown
          component="button"
          isDisabled={true}
        >
          Disabled Action
        </Unknown>,
        <Unknown />,
        <Unknown>
          Separated Link
        </Unknown>,
        <Unknown
          component="button"
        >
          Separated Action
        </Unknown>,
      ]
    }
    isGrouped={false}
    isOpen={true}
    isPlain={false}
    onSelect={[Function]}
    position="left"
    toggle={
      <Unknown
        aria-label="Application launcher"
        iconComponent={null}
        isDisabled={false}
        isOpen={true}
        onToggle={[Function]}
      >
        <HelpIcon
          color="currentColor"
          id="test-icon"
          noVerticalAlign={false}
          size="sm"
          title={null}
        />
      </Unknown>
    }
  >
    <nav
      aria-label="Application launcher"
      className="pf-c-app-launcher pf-m-expanded"
    >
      <Component
        aria-label="Application launcher"
        ariaHasPopup={true}
        iconComponent={null}
        id="pf-toggle-id-5"
        isDisabled={false}
        isOpen={true}
        isPlain={false}
        key=".0"
        onEnter={[Function]}
        onToggle={[Function]}
        parentRef={
          Object {
            "current": <nav
              aria-label="Application launcher"
              class="pf-c-app-launcher pf-m-expanded"
            >
              <button
                aria-expanded="true"
                class="pf-c-app-launcher__toggle"
                id="pf-toggle-id-5"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    id="test-icon"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 64 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M512.059-73.143c-282.338 0-512.059 229.673-512.059 512.025 0 282.235 229.721 511.975 512.059 511.975 282.281 0 511.941-229.735 511.941-511.975 0.005-282.352-229.659-512.025-511.941-512.025zM512.059 826.523c-213.826 0-387.728-173.856-387.728-387.643 0-213.89 173.904-387.694 387.728-387.694 213.717 0 387.671 173.803 387.671 387.694 0.005 213.785-173.957 387.643-387.671 387.643zM585.143 164.571v109.714c0 4.951-1.808 9.237-5.429 12.857s-7.906 5.429-12.857 5.429h-109.714c-4.953 0-9.239-1.808-12.857-5.429s-5.429-7.906-5.429-12.857v-109.714c0-4.951 1.81-9.237 5.429-12.857s7.904-5.429 12.857-5.429h109.714c4.951 0 9.237 1.808 12.857 5.429s5.429 7.906 5.429 12.857zM521.616 365.714c118.343 0 214.286 88.965 214.286 187.429s-95.943 178.286-214.286 178.286c-173.045 0-208.091-93.714-213.963-171.113 0-7.936 6.729-9.838 15.872-9.838s108.073 0 113.143 0c6.096 0 14.475 0.633 17.554 10.571 0 48.857 135.968 54.953 135.968-7.904 0-31.506-29.717-63.817-68.571-66.194s-82.286-7.607-82.286-54.199c0-13.022 0-25.673 0-44.693 0-19.015 9.717-22.343 27.431-22.343s54.853-0.002 54.853-0.002z"
                      transform="rotate(180 0 512) scale(-1 1)"
                    />
                  </svg>
                </span>
              </button>
              <ul
                aria-labelledby="pf-toggle-id-5"
                class="pf-c-app-launcher__menu"
                role="menu"
              >
                <li
                  role="none"
                >
                  <a
                    aria-disabled="false"
                    class="pf-c-app-launcher__menu-item"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Link
                  </a>
                </li>
                <li
                  role="none"
                >
                  <button
                    class="pf-c-app-launcher__menu-item"
                    role="menuitem"
                    tabindex="-1"
                    type="button"
                  >
                    Action
                  </button>
                </li>
                <li
                  role="none"
                >
                  <a
                    aria-disabled="true"
                    class="pf-m-disabled pf-c-app-launcher__menu-item"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Disabled Link
                  </a>
                </li>
                <li
                  role="none"
                >
                  <button
                    class="pf-m-disabled pf-c-app-launcher__menu-item"
                    disabled=""
                    role="menuitem"
                    tabindex="-1"
                    type="button"
                  >
                    Disabled Action
                  </button>
                </li>
                <li
                  role="none"
                >
                  <div
                    class="pf-c-app-launcher__separator"
                    role="separator"
                  />
                </li>
                <li
                  role="none"
                >
                  <a
                    aria-disabled="false"
                    class="pf-c-app-launcher__menu-item"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Separated Link
                  </a>
                </li>
                <li
                  role="none"
                >
                  <button
                    class="pf-c-app-launcher__menu-item"
                    role="menuitem"
                    tabindex="-1"
                    type="button"
                  >
                    Separated Action
                  </button>
                </li>
              </ul>
            </nav>,
          }
        }
      >
        <Toggle
          className=""
          id="pf-toggle-id-5"
          isActive={false}
          isDisabled={false}
          isFocused={false}
          isHovered={false}
          isOpen={true}
          isPlain={false}
          isSplitButton={false}
          onEnter={[Function]}
          onToggle={[Function]}
          parentRef={
            Object {
              "current": <nav
                aria-label="Application launcher"
                class="pf-c-app-launcher pf-m-expanded"
              >
                <button
                  aria-expanded="true"
                  class="pf-c-app-launcher__toggle"
                  id="pf-toggle-id-5"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      id="test-icon"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 64 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M512.059-73.143c-282.338 0-512.059 229.673-512.059 512.025 0 282.235 229.721 511.975 512.059 511.975 282.281 0 511.941-229.735 511.941-511.975 0.005-282.352-229.659-512.025-511.941-512.025zM512.059 826.523c-213.826 0-387.728-173.856-387.728-387.643 0-213.89 173.904-387.694 387.728-387.694 213.717 0 387.671 173.803 387.671 387.694 0.005 213.785-173.957 387.643-387.671 387.643zM585.143 164.571v109.714c0 4.951-1.808 9.237-5.429 12.857s-7.906 5.429-12.857 5.429h-109.714c-4.953 0-9.239-1.808-12.857-5.429s-5.429-7.906-5.429-12.857v-109.714c0-4.951 1.81-9.237 5.429-12.857s7.904-5.429 12.857-5.429h109.714c4.951 0 9.237 1.808 12.857 5.429s5.429 7.906 5.429 12.857zM521.616 365.714c118.343 0 214.286 88.965 214.286 187.429s-95.943 178.286-214.286 178.286c-173.045 0-208.091-93.714-213.963-171.113 0-7.936 6.729-9.838 15.872-9.838s108.073 0 113.143 0c6.096 0 14.475 0.633 17.554 10.571 0 48.857 135.968 54.953 135.968-7.904 0-31.506-29.717-63.817-68.571-66.194s-82.286-7.607-82.286-54.199c0-13.022 0-25.673 0-44.693 0-19.015 9.717-22.343 27.431-22.343s54.853-0.002 54.853-0.002z"
                        transform="rotate(180 0 512) scale(-1 1)"
                      />
                    </svg>
                  </span>
                </button>
                <ul
                  aria-labelledby="pf-toggle-id-5"
                  class="pf-c-app-launcher__menu"
                  role="menu"
                >
                  <li
                    role="none"
                  >
                    <a
                      aria-disabled="false"
                      class="pf-c-app-launcher__menu-item"
                      role="menuitem"
                      tabindex="-1"
                    >
                      Link
                    </a>
                  </li>
                  <li
                    role="none"
                  >
                    <button
                      class="pf-c-app-launcher__menu-item"
                      role="menuitem"
                      tabindex="-1"
                      type="button"
                    >
                      Action
                    </button>
                  </li>
                  <li
                    role="none"
                  >
                    <a
                      aria-disabled="true"
                      class="pf-m-disabled pf-c-app-launcher__menu-item"
                      role="menuitem"
                      tabindex="-1"
                    >
                      Disabled Link
                    </a>
                  </li>
                  <li
                    role="none"
                  >
                    <button
                      class="pf-m-disabled pf-c-app-launcher__menu-item"
                      disabled=""
                      role="menuitem"
                      tabindex="-1"
                      type="button"
                    >
                      Disabled Action
                    </button>
                  </li>
                  <li
                    role="none"
                  >
                    <div
                      class="pf-c-app-launcher__separator"
                      role="separator"
                    />
                  </li>
                  <li
                    role="none"
                  >
                    <a
                      aria-disabled="false"
                      class="pf-c-app-launcher__menu-item"
                      role="menuitem"
                      tabindex="-1"
                    >
                      Separated Link
                    </a>
                  </li>
                  <li
                    role="none"
                  >
                    <button
                      class="pf-c-app-launcher__menu-item"
                      role="menuitem"
                      tabindex="-1"
                      type="button"
                    >
                      Separated Action
                    </button>
                  </li>
                </ul>
              </nav>,
            }
          }
        >
          <button
            aria-expanded={true}
            className="pf-c-app-launcher__toggle"
            disabled={false}
            id="pf-toggle-id-5"
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <span
              className={null}
            >
              <HelpIcon
                color="currentColor"
                id="test-icon"
                noVerticalAlign={false}
                size="sm"
                title={null}
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  id="test-icon"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 64 1024 1024"
                  width="1em"
                >
                  <path
                    d="M512.059-73.143c-282.338 0-512.059 229.673-512.059 512.025 0 282.235 229.721 511.975 512.059 511.975 282.281 0 511.941-229.735 511.941-511.975 0.005-282.352-229.659-512.025-511.941-512.025zM512.059 826.523c-213.826 0-387.728-173.856-387.728-387.643 0-213.89 173.904-387.694 387.728-387.694 213.717 0 387.671 173.803 387.671 387.694 0.005 213.785-173.957 387.643-387.671 387.643zM585.143 164.571v109.714c0 4.951-1.808 9.237-5.429 12.857s-7.906 5.429-12.857 5.429h-109.714c-4.953 0-9.239-1.808-12.857-5.429s-5.429-7.906-5.429-12.857v-109.714c0-4.951 1.81-9.237 5.429-12.857s7.904-5.429 12.857-5.429h109.714c4.951 0 9.237 1.808 12.857 5.429s5.429 7.906 5.429 12.857zM521.616 365.714c118.343 0 214.286 88.965 214.286 187.429s-95.943 178.286-214.286 178.286c-173.045 0-208.091-93.714-213.963-171.113 0-7.936 6.729-9.838 15.872-9.838s108.073 0 113.143 0c6.096 0 14.475 0.633 17.554 10.571 0 48.857 135.968 54.953 135.968-7.904 0-31.506-29.717-63.817-68.571-66.194s-82.286-7.607-82.286-54.199c0-13.022 0-25.673 0-44.693 0-19.015 9.717-22.343 27.431-22.343s54.853-0.002 54.853-0.002z"
                    transform="rotate(180 0 512) scale(-1 1)"
                  />
                </svg>
              </HelpIcon>
            </span>
          </button>
        </Toggle>
      </Component>
      <DropdownMenu
        aria-labelledby="pf-toggle-id-5"
        autoFocus={true}
        className=""
        component="ul"
        isGrouped={false}
        isOpen={true}
        openedOnEnter={false}
        position="left"
      >
        <ul
          aria-labelledby="pf-toggle-id-5"
          autoFocus={true}
          className="pf-c-app-launcher__menu"
          hidden={false}
          role="menu"
        >
          <Component
            index={0}
            key=".$link"
          >
            <InternalDropdownItem
              className=""
              component="a"
              context={
                Object {
                  "keyHandler": [Function],
                  "sendRef": [Function],
                }
              }
              href=""
              index={0}
              isDisabled={false}
              isHovered={false}
              onClick={[Function]}
              onSelect={[Function]}
              role="menuitem"
              tabIndex={-1}
              tooltip={null}
              tooltipProps={Object {}}
            >
              <li
                role="none"
              >
                <a
                  aria-disabled={false}
                  className="pf-c-app-launcher__menu-item"
                  href={null}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onSelect={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                >
                  Link
                </a>
              </li>
            </InternalDropdownItem>
          </Component>
          <Component
            component="button"
            index={1}
            key=".$action"
          >
            <InternalDropdownItem
              className=""
              component="button"
              context={
                Object {
                  "keyHandler": [Function],
                  "sendRef": [Function],
                }
              }
              href=""
              index={1}
              isDisabled={false}
              isHovered={false}
              onClick={[Function]}
              onSelect={[Function]}
              role="menuitem"
              tabIndex={-1}
              tooltip={null}
              tooltipProps={Object {}}
            >
              <li
                role="none"
              >
                <button
                  className="pf-c-app-launcher__menu-item"
                  disabled={false}
                  href={null}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onSelect={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                  type="button"
                >
                  Action
                </button>
              </li>
            </InternalDropdownItem>
          </Component>
          <Component
            index={2}
            isDisabled={true}
            key=".$disabled link"
          >
            <InternalDropdownItem
              className=""
              component="a"
              context={
                Object {
                  "keyHandler": [Function],
                  "sendRef": [Function],
                }
              }
              href=""
              index={2}
              isDisabled={true}
              isHovered={false}
              onClick={[Function]}
              onSelect={[Function]}
              role="menuitem"
              tabIndex={-1}
              tooltip={null}
              tooltipProps={Object {}}
            >
              <li
                role="none"
              >
                <a
                  aria-disabled={true}
                  className="pf-m-disabled pf-c-app-launcher__menu-item"
                  href={null}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onSelect={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                >
                  Disabled Link
                </a>
              </li>
            </InternalDropdownItem>
          </Component>
          <Component
            component="button"
            index={3}
            isDisabled={true}
            key=".$disabled action"
          >
            <InternalDropdownItem
              className=""
              component="button"
              context={
                Object {
                  "keyHandler": [Function],
                  "sendRef": [Function],
                }
              }
              href=""
              index={3}
              isDisabled={true}
              isHovered={false}
              onClick={[Function]}
              onSelect={[Function]}
              role="menuitem"
              tabIndex={-1}
              tooltip={null}
              tooltipProps={Object {}}
            >
              <li
                role="none"
              >
                <button
                  className="pf-m-disabled pf-c-app-launcher__menu-item"
                  disabled={true}
                  href={null}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onSelect={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                  type="button"
                >
                  Disabled Action
                </button>
              </li>
            </InternalDropdownItem>
          </Component>
          <Component
            index={4}
            key=".$separator"
          >
            <InternalDropdownItem
              className="pf-c-app-launcher__separator"
              component="div"
              context={
                Object {
                  "keyHandler": [Function],
                  "sendRef": [Function],
                }
              }
              href=""
              index={4}
              isDisabled={false}
              isHovered={false}
              onClick={[Function]}
              onSelect={[Function]}
              role="separator"
              tooltipProps={Object {}}
            >
              <li
                role="none"
              >
                <div
                  className="pf-c-app-launcher__separator"
                  href={null}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onSelect={[Function]}
                  role="separator"
                />
              </li>
            </InternalDropdownItem>
          </Component>
          <Component
            index={5}
            key=".$separated link"
          >
            <InternalDropdownItem
              className=""
              component="a"
              context={
                Object {
                  "keyHandler": [Function],
                  "sendRef": [Function],
                }
              }
              href=""
              index={5}
              isDisabled={false}
              isHovered={false}
              onClick={[Function]}
              onSelect={[Function]}
              role="menuitem"
              tabIndex={-1}
              tooltip={null}
              tooltipProps={Object {}}
            >
              <li
                role="none"
              >
                <a
                  aria-disabled={false}
                  className="pf-c-app-launcher__menu-item"
                  href={null}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onSelect={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                >
                  Separated Link
                </a>
              </li>
            </InternalDropdownItem>
          </Component>
          <Component
            component="button"
            index={6}
            key=".$separated action"
          >
            <InternalDropdownItem
              className=""
              component="button"
              context={
                Object {
                  "keyHandler": [Function],
                  "sendRef": [Function],
                }
              }
              href=""
              index={6}
              isDisabled={false}
              isHovered={false}
              onClick={[Function]}
              onSelect={[Function]}
              role="menuitem"
              tabIndex={-1}
              tooltip={null}
              tooltipProps={Object {}}
            >
              <li
                role="none"
              >
                <button
                  className="pf-c-app-launcher__menu-item"
                  disabled={false}
                  href={null}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onSelect={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                  type="button"
                >
                  Separated Action
                </button>
              </li>
            </InternalDropdownItem>
          </Component>
        </ul>
      </DropdownMenu>
    </nav>
  </DropdownWithContext>
</ApplicationLauncher>
`;

exports[`ApplicationLauncher dropup + right aligned 1`] = `
<ApplicationLauncher
  aria-label="Application launcher"
  className=""
  direction="up"
  dropdownItems={
    Array [
      <Unknown>
        Link
      </Unknown>,
      <Unknown
        component="button"
      >
        Action
      </Unknown>,
      <Unknown
        isDisabled={true}
      >
        Disabled Link
      </Unknown>,
      <Unknown
        component="button"
        isDisabled={true}
      >
        Disabled Action
      </Unknown>,
      <Unknown />,
      <Unknown>
        Separated Link
      </Unknown>,
      <Unknown
        component="button"
      >
        Separated Action
      </Unknown>,
    ]
  }
  isDisabled={false}
  isGrouped={false}
  isOpen={false}
  items={Array []}
  onSelect={[Function]}
  onToggle={[Function]}
  position="right"
  toggleIcon={
    <ThIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
      title={null}
    />
  }
>
  <DropdownWithContext
    aria-label="Application launcher"
    className=""
    direction="up"
    dropdownItems={
      Array [
        <Unknown>
          Link
        </Unknown>,
        <Unknown
          component="button"
        >
          Action
        </Unknown>,
        <Unknown
          isDisabled={true}
        >
          Disabled Link
        </Unknown>,
        <Unknown
          component="button"
          isDisabled={true}
        >
          Disabled Action
        </Unknown>,
        <Unknown />,
        <Unknown>
          Separated Link
        </Unknown>,
        <Unknown
          component="button"
        >
          Separated Action
        </Unknown>,
      ]
    }
    isGrouped={false}
    isOpen={false}
    isPlain={false}
    onSelect={[Function]}
    position="right"
    toggle={
      <Unknown
        aria-label="Application launcher"
        iconComponent={null}
        isDisabled={false}
        isOpen={false}
        onToggle={[Function]}
      >
        <ThIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        />
      </Unknown>
    }
  >
    <nav
      aria-label="Application launcher"
      className="pf-c-app-launcher pf-m-top"
    >
      <Component
        aria-label="Application launcher"
        ariaHasPopup={true}
        iconComponent={null}
        id="pf-toggle-id-3"
        isDisabled={false}
        isOpen={false}
        isPlain={false}
        key=".0"
        onEnter={[Function]}
        onToggle={[Function]}
        parentRef={
          Object {
            "current": <nav
              aria-label="Application launcher"
              class="pf-c-app-launcher pf-m-top"
            >
              <button
                aria-expanded="false"
                class="pf-c-app-launcher__toggle"
                id="pf-toggle-id-3"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M149.333 56v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V56c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zm181.334 240v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm32-240v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24zm-32 80V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm-205.334 56H24c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zm386.667-56H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm0 160H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zM181.333 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24z"
                      transform=""
                    />
                  </svg>
                </span>
              </button>
            </nav>,
          }
        }
      >
        <Toggle
          className=""
          id="pf-toggle-id-3"
          isActive={false}
          isDisabled={false}
          isFocused={false}
          isHovered={false}
          isOpen={false}
          isPlain={false}
          isSplitButton={false}
          onEnter={[Function]}
          onToggle={[Function]}
          parentRef={
            Object {
              "current": <nav
                aria-label="Application launcher"
                class="pf-c-app-launcher pf-m-top"
              >
                <button
                  aria-expanded="false"
                  class="pf-c-app-launcher__toggle"
                  id="pf-toggle-id-3"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M149.333 56v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V56c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zm181.334 240v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm32-240v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24zm-32 80V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm-205.334 56H24c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zm386.667-56H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm0 160H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zM181.333 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24z"
                        transform=""
                      />
                    </svg>
                  </span>
                </button>
              </nav>,
            }
          }
        >
          <button
            aria-expanded={false}
            className="pf-c-app-launcher__toggle"
            disabled={false}
            id="pf-toggle-id-3"
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <span
              className={null}
            >
              <ThIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
                title={null}
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M149.333 56v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V56c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zm181.334 240v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm32-240v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24zm-32 80V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm-205.334 56H24c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zm386.667-56H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm0 160H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zM181.333 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24z"
                    transform=""
                  />
                </svg>
              </ThIcon>
            </span>
          </button>
        </Toggle>
      </Component>
    </nav>
  </DropdownWithContext>
</ApplicationLauncher>
`;

exports[`ApplicationLauncher dropup 1`] = `
<ApplicationLauncher
  aria-label="Application launcher"
  className=""
  direction="up"
  dropdownItems={
    Array [
      <Unknown>
        Link
      </Unknown>,
      <Unknown
        component="button"
      >
        Action
      </Unknown>,
      <Unknown
        isDisabled={true}
      >
        Disabled Link
      </Unknown>,
      <Unknown
        component="button"
        isDisabled={true}
      >
        Disabled Action
      </Unknown>,
      <Unknown />,
      <Unknown>
        Separated Link
      </Unknown>,
      <Unknown
        component="button"
      >
        Separated Action
      </Unknown>,
    ]
  }
  isDisabled={false}
  isGrouped={false}
  isOpen={false}
  items={Array []}
  onSelect={[Function]}
  onToggle={[Function]}
  position="left"
  toggleIcon={
    <ThIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
      title={null}
    />
  }
>
  <DropdownWithContext
    aria-label="Application launcher"
    className=""
    direction="up"
    dropdownItems={
      Array [
        <Unknown>
          Link
        </Unknown>,
        <Unknown
          component="button"
        >
          Action
        </Unknown>,
        <Unknown
          isDisabled={true}
        >
          Disabled Link
        </Unknown>,
        <Unknown
          component="button"
          isDisabled={true}
        >
          Disabled Action
        </Unknown>,
        <Unknown />,
        <Unknown>
          Separated Link
        </Unknown>,
        <Unknown
          component="button"
        >
          Separated Action
        </Unknown>,
      ]
    }
    isGrouped={false}
    isOpen={false}
    isPlain={false}
    onSelect={[Function]}
    position="left"
    toggle={
      <Unknown
        aria-label="Application launcher"
        iconComponent={null}
        isDisabled={false}
        isOpen={false}
        onToggle={[Function]}
      >
        <ThIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        />
      </Unknown>
    }
  >
    <nav
      aria-label="Application launcher"
      className="pf-c-app-launcher pf-m-top"
    >
      <Component
        aria-label="Application launcher"
        ariaHasPopup={true}
        iconComponent={null}
        id="pf-toggle-id-2"
        isDisabled={false}
        isOpen={false}
        isPlain={false}
        key=".0"
        onEnter={[Function]}
        onToggle={[Function]}
        parentRef={
          Object {
            "current": <nav
              aria-label="Application launcher"
              class="pf-c-app-launcher pf-m-top"
            >
              <button
                aria-expanded="false"
                class="pf-c-app-launcher__toggle"
                id="pf-toggle-id-2"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M149.333 56v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V56c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zm181.334 240v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm32-240v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24zm-32 80V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm-205.334 56H24c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zm386.667-56H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm0 160H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zM181.333 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24z"
                      transform=""
                    />
                  </svg>
                </span>
              </button>
            </nav>,
          }
        }
      >
        <Toggle
          className=""
          id="pf-toggle-id-2"
          isActive={false}
          isDisabled={false}
          isFocused={false}
          isHovered={false}
          isOpen={false}
          isPlain={false}
          isSplitButton={false}
          onEnter={[Function]}
          onToggle={[Function]}
          parentRef={
            Object {
              "current": <nav
                aria-label="Application launcher"
                class="pf-c-app-launcher pf-m-top"
              >
                <button
                  aria-expanded="false"
                  class="pf-c-app-launcher__toggle"
                  id="pf-toggle-id-2"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M149.333 56v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V56c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zm181.334 240v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm32-240v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24zm-32 80V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm-205.334 56H24c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zm386.667-56H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm0 160H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zM181.333 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24z"
                        transform=""
                      />
                    </svg>
                  </span>
                </button>
              </nav>,
            }
          }
        >
          <button
            aria-expanded={false}
            className="pf-c-app-launcher__toggle"
            disabled={false}
            id="pf-toggle-id-2"
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <span
              className={null}
            >
              <ThIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
                title={null}
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M149.333 56v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V56c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zm181.334 240v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm32-240v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24zm-32 80V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm-205.334 56H24c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zm386.667-56H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm0 160H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zM181.333 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24z"
                    transform=""
                  />
                </svg>
              </ThIcon>
            </span>
          </button>
        </Toggle>
      </Component>
    </nav>
  </DropdownWithContext>
</ApplicationLauncher>
`;

exports[`ApplicationLauncher expanded 1`] = `
<ApplicationLauncher
  aria-label="Application launcher"
  className=""
  direction="down"
  dropdownItems={
    Array [
      <Unknown>
        Link
      </Unknown>,
      <Unknown
        component="button"
      >
        Action
      </Unknown>,
      <Unknown
        isDisabled={true}
      >
        Disabled Link
      </Unknown>,
      <Unknown
        component="button"
        isDisabled={true}
      >
        Disabled Action
      </Unknown>,
      <Unknown />,
      <Unknown>
        Separated Link
      </Unknown>,
      <Unknown
        component="button"
      >
        Separated Action
      </Unknown>,
    ]
  }
  isDisabled={false}
  isGrouped={false}
  isOpen={true}
  items={Array []}
  onSelect={[Function]}
  onToggle={[Function]}
  position="left"
  toggleIcon={
    <ThIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
      title={null}
    />
  }
>
  <DropdownWithContext
    aria-label="Application launcher"
    className=""
    direction="down"
    dropdownItems={
      Array [
        <Unknown>
          Link
        </Unknown>,
        <Unknown
          component="button"
        >
          Action
        </Unknown>,
        <Unknown
          isDisabled={true}
        >
          Disabled Link
        </Unknown>,
        <Unknown
          component="button"
          isDisabled={true}
        >
          Disabled Action
        </Unknown>,
        <Unknown />,
        <Unknown>
          Separated Link
        </Unknown>,
        <Unknown
          component="button"
        >
          Separated Action
        </Unknown>,
      ]
    }
    isGrouped={false}
    isOpen={true}
    isPlain={false}
    onSelect={[Function]}
    position="left"
    toggle={
      <Unknown
        aria-label="Application launcher"
        iconComponent={null}
        isDisabled={false}
        isOpen={true}
        onToggle={[Function]}
      >
        <ThIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        />
      </Unknown>
    }
  >
    <nav
      aria-label="Application launcher"
      className="pf-c-app-launcher pf-m-expanded"
    >
      <Component
        aria-label="Application launcher"
        ariaHasPopup={true}
        iconComponent={null}
        id="pf-toggle-id-4"
        isDisabled={false}
        isOpen={true}
        isPlain={false}
        key=".0"
        onEnter={[Function]}
        onToggle={[Function]}
        parentRef={
          Object {
            "current": <nav
              aria-label="Application launcher"
              class="pf-c-app-launcher pf-m-expanded"
            >
              <button
                aria-expanded="true"
                class="pf-c-app-launcher__toggle"
                id="pf-toggle-id-4"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M149.333 56v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V56c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zm181.334 240v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm32-240v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24zm-32 80V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm-205.334 56H24c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zm386.667-56H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm0 160H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zM181.333 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24z"
                      transform=""
                    />
                  </svg>
                </span>
              </button>
              <ul
                aria-labelledby="pf-toggle-id-4"
                class="pf-c-app-launcher__menu"
                role="menu"
              >
                <li
                  role="none"
                >
                  <a
                    aria-disabled="false"
                    class="pf-c-app-launcher__menu-item"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Link
                  </a>
                </li>
                <li
                  role="none"
                >
                  <button
                    class="pf-c-app-launcher__menu-item"
                    role="menuitem"
                    tabindex="-1"
                    type="button"
                  >
                    Action
                  </button>
                </li>
                <li
                  role="none"
                >
                  <a
                    aria-disabled="true"
                    class="pf-m-disabled pf-c-app-launcher__menu-item"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Disabled Link
                  </a>
                </li>
                <li
                  role="none"
                >
                  <button
                    class="pf-m-disabled pf-c-app-launcher__menu-item"
                    disabled=""
                    role="menuitem"
                    tabindex="-1"
                    type="button"
                  >
                    Disabled Action
                  </button>
                </li>
                <li
                  role="none"
                >
                  <div
                    class="pf-c-app-launcher__separator"
                    role="separator"
                  />
                </li>
                <li
                  role="none"
                >
                  <a
                    aria-disabled="false"
                    class="pf-c-app-launcher__menu-item"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Separated Link
                  </a>
                </li>
                <li
                  role="none"
                >
                  <button
                    class="pf-c-app-launcher__menu-item"
                    role="menuitem"
                    tabindex="-1"
                    type="button"
                  >
                    Separated Action
                  </button>
                </li>
              </ul>
            </nav>,
          }
        }
      >
        <Toggle
          className=""
          id="pf-toggle-id-4"
          isActive={false}
          isDisabled={false}
          isFocused={false}
          isHovered={false}
          isOpen={true}
          isPlain={false}
          isSplitButton={false}
          onEnter={[Function]}
          onToggle={[Function]}
          parentRef={
            Object {
              "current": <nav
                aria-label="Application launcher"
                class="pf-c-app-launcher pf-m-expanded"
              >
                <button
                  aria-expanded="true"
                  class="pf-c-app-launcher__toggle"
                  id="pf-toggle-id-4"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M149.333 56v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V56c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zm181.334 240v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm32-240v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24zm-32 80V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm-205.334 56H24c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zm386.667-56H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm0 160H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zM181.333 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24z"
                        transform=""
                      />
                    </svg>
                  </span>
                </button>
                <ul
                  aria-labelledby="pf-toggle-id-4"
                  class="pf-c-app-launcher__menu"
                  role="menu"
                >
                  <li
                    role="none"
                  >
                    <a
                      aria-disabled="false"
                      class="pf-c-app-launcher__menu-item"
                      role="menuitem"
                      tabindex="-1"
                    >
                      Link
                    </a>
                  </li>
                  <li
                    role="none"
                  >
                    <button
                      class="pf-c-app-launcher__menu-item"
                      role="menuitem"
                      tabindex="-1"
                      type="button"
                    >
                      Action
                    </button>
                  </li>
                  <li
                    role="none"
                  >
                    <a
                      aria-disabled="true"
                      class="pf-m-disabled pf-c-app-launcher__menu-item"
                      role="menuitem"
                      tabindex="-1"
                    >
                      Disabled Link
                    </a>
                  </li>
                  <li
                    role="none"
                  >
                    <button
                      class="pf-m-disabled pf-c-app-launcher__menu-item"
                      disabled=""
                      role="menuitem"
                      tabindex="-1"
                      type="button"
                    >
                      Disabled Action
                    </button>
                  </li>
                  <li
                    role="none"
                  >
                    <div
                      class="pf-c-app-launcher__separator"
                      role="separator"
                    />
                  </li>
                  <li
                    role="none"
                  >
                    <a
                      aria-disabled="false"
                      class="pf-c-app-launcher__menu-item"
                      role="menuitem"
                      tabindex="-1"
                    >
                      Separated Link
                    </a>
                  </li>
                  <li
                    role="none"
                  >
                    <button
                      class="pf-c-app-launcher__menu-item"
                      role="menuitem"
                      tabindex="-1"
                      type="button"
                    >
                      Separated Action
                    </button>
                  </li>
                </ul>
              </nav>,
            }
          }
        >
          <button
            aria-expanded={true}
            className="pf-c-app-launcher__toggle"
            disabled={false}
            id="pf-toggle-id-4"
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <span
              className={null}
            >
              <ThIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
                title={null}
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M149.333 56v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V56c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zm181.334 240v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm32-240v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24zm-32 80V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm-205.334 56H24c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zm386.667-56H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm0 160H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zM181.333 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24z"
                    transform=""
                  />
                </svg>
              </ThIcon>
            </span>
          </button>
        </Toggle>
      </Component>
      <DropdownMenu
        aria-labelledby="pf-toggle-id-4"
        autoFocus={true}
        className=""
        component="ul"
        isGrouped={false}
        isOpen={true}
        openedOnEnter={false}
        position="left"
      >
        <ul
          aria-labelledby="pf-toggle-id-4"
          autoFocus={true}
          className="pf-c-app-launcher__menu"
          hidden={false}
          role="menu"
        >
          <Component
            index={0}
            key=".$link"
          >
            <InternalDropdownItem
              className=""
              component="a"
              context={
                Object {
                  "keyHandler": [Function],
                  "sendRef": [Function],
                }
              }
              href=""
              index={0}
              isDisabled={false}
              isHovered={false}
              onClick={[Function]}
              onSelect={[Function]}
              role="menuitem"
              tabIndex={-1}
              tooltip={null}
              tooltipProps={Object {}}
            >
              <li
                role="none"
              >
                <a
                  aria-disabled={false}
                  className="pf-c-app-launcher__menu-item"
                  href={null}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onSelect={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                >
                  Link
                </a>
              </li>
            </InternalDropdownItem>
          </Component>
          <Component
            component="button"
            index={1}
            key=".$action"
          >
            <InternalDropdownItem
              className=""
              component="button"
              context={
                Object {
                  "keyHandler": [Function],
                  "sendRef": [Function],
                }
              }
              href=""
              index={1}
              isDisabled={false}
              isHovered={false}
              onClick={[Function]}
              onSelect={[Function]}
              role="menuitem"
              tabIndex={-1}
              tooltip={null}
              tooltipProps={Object {}}
            >
              <li
                role="none"
              >
                <button
                  className="pf-c-app-launcher__menu-item"
                  disabled={false}
                  href={null}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onSelect={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                  type="button"
                >
                  Action
                </button>
              </li>
            </InternalDropdownItem>
          </Component>
          <Component
            index={2}
            isDisabled={true}
            key=".$disabled link"
          >
            <InternalDropdownItem
              className=""
              component="a"
              context={
                Object {
                  "keyHandler": [Function],
                  "sendRef": [Function],
                }
              }
              href=""
              index={2}
              isDisabled={true}
              isHovered={false}
              onClick={[Function]}
              onSelect={[Function]}
              role="menuitem"
              tabIndex={-1}
              tooltip={null}
              tooltipProps={Object {}}
            >
              <li
                role="none"
              >
                <a
                  aria-disabled={true}
                  className="pf-m-disabled pf-c-app-launcher__menu-item"
                  href={null}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onSelect={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                >
                  Disabled Link
                </a>
              </li>
            </InternalDropdownItem>
          </Component>
          <Component
            component="button"
            index={3}
            isDisabled={true}
            key=".$disabled action"
          >
            <InternalDropdownItem
              className=""
              component="button"
              context={
                Object {
                  "keyHandler": [Function],
                  "sendRef": [Function],
                }
              }
              href=""
              index={3}
              isDisabled={true}
              isHovered={false}
              onClick={[Function]}
              onSelect={[Function]}
              role="menuitem"
              tabIndex={-1}
              tooltip={null}
              tooltipProps={Object {}}
            >
              <li
                role="none"
              >
                <button
                  className="pf-m-disabled pf-c-app-launcher__menu-item"
                  disabled={true}
                  href={null}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onSelect={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                  type="button"
                >
                  Disabled Action
                </button>
              </li>
            </InternalDropdownItem>
          </Component>
          <Component
            index={4}
            key=".$separator"
          >
            <InternalDropdownItem
              className="pf-c-app-launcher__separator"
              component="div"
              context={
                Object {
                  "keyHandler": [Function],
                  "sendRef": [Function],
                }
              }
              href=""
              index={4}
              isDisabled={false}
              isHovered={false}
              onClick={[Function]}
              onSelect={[Function]}
              role="separator"
              tooltipProps={Object {}}
            >
              <li
                role="none"
              >
                <div
                  className="pf-c-app-launcher__separator"
                  href={null}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onSelect={[Function]}
                  role="separator"
                />
              </li>
            </InternalDropdownItem>
          </Component>
          <Component
            index={5}
            key=".$separated link"
          >
            <InternalDropdownItem
              className=""
              component="a"
              context={
                Object {
                  "keyHandler": [Function],
                  "sendRef": [Function],
                }
              }
              href=""
              index={5}
              isDisabled={false}
              isHovered={false}
              onClick={[Function]}
              onSelect={[Function]}
              role="menuitem"
              tabIndex={-1}
              tooltip={null}
              tooltipProps={Object {}}
            >
              <li
                role="none"
              >
                <a
                  aria-disabled={false}
                  className="pf-c-app-launcher__menu-item"
                  href={null}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onSelect={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                >
                  Separated Link
                </a>
              </li>
            </InternalDropdownItem>
          </Component>
          <Component
            component="button"
            index={6}
            key=".$separated action"
          >
            <InternalDropdownItem
              className=""
              component="button"
              context={
                Object {
                  "keyHandler": [Function],
                  "sendRef": [Function],
                }
              }
              href=""
              index={6}
              isDisabled={false}
              isHovered={false}
              onClick={[Function]}
              onSelect={[Function]}
              role="menuitem"
              tabIndex={-1}
              tooltip={null}
              tooltipProps={Object {}}
            >
              <li
                role="none"
              >
                <button
                  className="pf-c-app-launcher__menu-item"
                  disabled={false}
                  href={null}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onSelect={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                  type="button"
                >
                  Separated Action
                </button>
              </li>
            </InternalDropdownItem>
          </Component>
        </ul>
      </DropdownMenu>
    </nav>
  </DropdownWithContext>
</ApplicationLauncher>
`;

exports[`ApplicationLauncher regular 1`] = `
<ApplicationLauncher
  aria-label="Application launcher"
  className=""
  direction="down"
  dropdownItems={
    Array [
      <Unknown>
        Link
      </Unknown>,
      <Unknown
        component="button"
      >
        Action
      </Unknown>,
      <Unknown
        isDisabled={true}
      >
        Disabled Link
      </Unknown>,
      <Unknown
        component="button"
        isDisabled={true}
      >
        Disabled Action
      </Unknown>,
      <Unknown />,
      <Unknown>
        Separated Link
      </Unknown>,
      <Unknown
        component="button"
      >
        Separated Action
      </Unknown>,
    ]
  }
  isDisabled={false}
  isGrouped={false}
  isOpen={false}
  items={Array []}
  onSelect={[Function]}
  onToggle={[Function]}
  position="left"
  toggleIcon={
    <ThIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
      title={null}
    />
  }
>
  <DropdownWithContext
    aria-label="Application launcher"
    className=""
    direction="down"
    dropdownItems={
      Array [
        <Unknown>
          Link
        </Unknown>,
        <Unknown
          component="button"
        >
          Action
        </Unknown>,
        <Unknown
          isDisabled={true}
        >
          Disabled Link
        </Unknown>,
        <Unknown
          component="button"
          isDisabled={true}
        >
          Disabled Action
        </Unknown>,
        <Unknown />,
        <Unknown>
          Separated Link
        </Unknown>,
        <Unknown
          component="button"
        >
          Separated Action
        </Unknown>,
      ]
    }
    isGrouped={false}
    isOpen={false}
    isPlain={false}
    onSelect={[Function]}
    position="left"
    toggle={
      <Unknown
        aria-label="Application launcher"
        iconComponent={null}
        isDisabled={false}
        isOpen={false}
        onToggle={[Function]}
      >
        <ThIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        />
      </Unknown>
    }
  >
    <nav
      aria-label="Application launcher"
      className="pf-c-app-launcher"
    >
      <Component
        aria-label="Application launcher"
        ariaHasPopup={true}
        iconComponent={null}
        id="pf-toggle-id-0"
        isDisabled={false}
        isOpen={false}
        isPlain={false}
        key=".0"
        onEnter={[Function]}
        onToggle={[Function]}
        parentRef={
          Object {
            "current": <nav
              aria-label="Application launcher"
              class="pf-c-app-launcher"
            >
              <button
                aria-expanded="false"
                class="pf-c-app-launcher__toggle"
                id="pf-toggle-id-0"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M149.333 56v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V56c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zm181.334 240v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm32-240v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24zm-32 80V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm-205.334 56H24c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zm386.667-56H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm0 160H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zM181.333 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24z"
                      transform=""
                    />
                  </svg>
                </span>
              </button>
            </nav>,
          }
        }
      >
        <Toggle
          className=""
          id="pf-toggle-id-0"
          isActive={false}
          isDisabled={false}
          isFocused={false}
          isHovered={false}
          isOpen={false}
          isPlain={false}
          isSplitButton={false}
          onEnter={[Function]}
          onToggle={[Function]}
          parentRef={
            Object {
              "current": <nav
                aria-label="Application launcher"
                class="pf-c-app-launcher"
              >
                <button
                  aria-expanded="false"
                  class="pf-c-app-launcher__toggle"
                  id="pf-toggle-id-0"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M149.333 56v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V56c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zm181.334 240v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm32-240v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24zm-32 80V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm-205.334 56H24c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zm386.667-56H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm0 160H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zM181.333 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24z"
                        transform=""
                      />
                    </svg>
                  </span>
                </button>
              </nav>,
            }
          }
        >
          <button
            aria-expanded={false}
            className="pf-c-app-launcher__toggle"
            disabled={false}
            id="pf-toggle-id-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <span
              className={null}
            >
              <ThIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
                title={null}
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M149.333 56v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V56c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zm181.334 240v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm32-240v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24zm-32 80V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm-205.334 56H24c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zm386.667-56H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm0 160H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zM181.333 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24z"
                    transform=""
                  />
                </svg>
              </ThIcon>
            </span>
          </button>
        </Toggle>
      </Component>
    </nav>
  </DropdownWithContext>
</ApplicationLauncher>
`;

exports[`ApplicationLauncher right aligned 1`] = `
<ApplicationLauncher
  aria-label="Application launcher"
  className=""
  direction="down"
  dropdownItems={
    Array [
      <Unknown>
        Link
      </Unknown>,
      <Unknown
        component="button"
      >
        Action
      </Unknown>,
      <Unknown
        isDisabled={true}
      >
        Disabled Link
      </Unknown>,
      <Unknown
        component="button"
        isDisabled={true}
      >
        Disabled Action
      </Unknown>,
      <Unknown />,
      <Unknown>
        Separated Link
      </Unknown>,
      <Unknown
        component="button"
      >
        Separated Action
      </Unknown>,
    ]
  }
  isDisabled={false}
  isGrouped={false}
  isOpen={false}
  items={Array []}
  onSelect={[Function]}
  onToggle={[Function]}
  position="right"
  toggleIcon={
    <ThIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
      title={null}
    />
  }
>
  <DropdownWithContext
    aria-label="Application launcher"
    className=""
    direction="down"
    dropdownItems={
      Array [
        <Unknown>
          Link
        </Unknown>,
        <Unknown
          component="button"
        >
          Action
        </Unknown>,
        <Unknown
          isDisabled={true}
        >
          Disabled Link
        </Unknown>,
        <Unknown
          component="button"
          isDisabled={true}
        >
          Disabled Action
        </Unknown>,
        <Unknown />,
        <Unknown>
          Separated Link
        </Unknown>,
        <Unknown
          component="button"
        >
          Separated Action
        </Unknown>,
      ]
    }
    isGrouped={false}
    isOpen={false}
    isPlain={false}
    onSelect={[Function]}
    position="right"
    toggle={
      <Unknown
        aria-label="Application launcher"
        iconComponent={null}
        isDisabled={false}
        isOpen={false}
        onToggle={[Function]}
      >
        <ThIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        />
      </Unknown>
    }
  >
    <nav
      aria-label="Application launcher"
      className="pf-c-app-launcher"
    >
      <Component
        aria-label="Application launcher"
        ariaHasPopup={true}
        iconComponent={null}
        id="pf-toggle-id-1"
        isDisabled={false}
        isOpen={false}
        isPlain={false}
        key=".0"
        onEnter={[Function]}
        onToggle={[Function]}
        parentRef={
          Object {
            "current": <nav
              aria-label="Application launcher"
              class="pf-c-app-launcher"
            >
              <button
                aria-expanded="false"
                class="pf-c-app-launcher__toggle"
                id="pf-toggle-id-1"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M149.333 56v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V56c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zm181.334 240v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm32-240v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24zm-32 80V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm-205.334 56H24c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zm386.667-56H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm0 160H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zM181.333 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24z"
                      transform=""
                    />
                  </svg>
                </span>
              </button>
            </nav>,
          }
        }
      >
        <Toggle
          className=""
          id="pf-toggle-id-1"
          isActive={false}
          isDisabled={false}
          isFocused={false}
          isHovered={false}
          isOpen={false}
          isPlain={false}
          isSplitButton={false}
          onEnter={[Function]}
          onToggle={[Function]}
          parentRef={
            Object {
              "current": <nav
                aria-label="Application launcher"
                class="pf-c-app-launcher"
              >
                <button
                  aria-expanded="false"
                  class="pf-c-app-launcher__toggle"
                  id="pf-toggle-id-1"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M149.333 56v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V56c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zm181.334 240v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm32-240v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24zm-32 80V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm-205.334 56H24c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zm386.667-56H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm0 160H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zM181.333 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24z"
                        transform=""
                      />
                    </svg>
                  </span>
                </button>
              </nav>,
            }
          }
        >
          <button
            aria-expanded={false}
            className="pf-c-app-launcher__toggle"
            disabled={false}
            id="pf-toggle-id-1"
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <span
              className={null}
            >
              <ThIcon
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
                title={null}
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M149.333 56v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V56c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zm181.334 240v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm32-240v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24zm-32 80V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.256 0 24.001-10.745 24.001-24zm-205.334 56H24c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zm386.667-56H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm0 160H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H386.667c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zM181.333 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24z"
                    transform=""
                  />
                </svg>
              </ThIcon>
            </span>
          </button>
        </Toggle>
      </Component>
    </nav>
  </DropdownWithContext>
</ApplicationLauncher>
`;
